Ultimo commit na homolog, prometo, refatorando pagina de usuario, criando repositorio de tutor, revisado cadastro de usuario e deixando pronto pra integrar com back

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,4 +5,4 @@
 // duplicação de CSS
 
 // @SEE https://vuetifyjs.com/en/features/sass-variables/
-// $btn-border-radius: 10px;
+$btn-border-radius: 10px;
